[gd_scene load_steps=3 format=3 uid="uid://bvq8yh3xqw7ej"]

[ext_resource type="Script" path="res://scenes/top_bar.gd" id="1_topbar"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_top_bar"]
bg_color = Color(0.1, 0.12, 0.1, 1)
border_width_bottom = 2
border_color = Color(0.2, 0.8, 0.2, 1)
content_margin_left = 15.0
content_margin_top = 12.0
content_margin_right = 15.0
content_margin_bottom = 12.0

[node name="TopBar" type="PanelContainer"]
custom_minimum_size = Vector2(0, 80)
offset_right = 720.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_top_bar")
script = ExtResource("1_topbar")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 30

[node name="MoneyContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MoneyIcon" type="Label" parent="HBoxContainer/MoneyContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 32
text = "üí∞"

[node name="MoneyValue" type="Label" parent="HBoxContainer/MoneyContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 32
text = "$0"

[node name="DucksContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DucksIcon" type="Label" parent="HBoxContainer/DucksContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 32
text = "ü¶Ü"

[node name="DucksValue" type="Label" parent="HBoxContainer/DucksContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 32
text = "2"

[node name="BugsContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BugsIcon" type="Label" parent="HBoxContainer/BugsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 32
text = "üêõ"

[node name="BugsValue" type="Label" parent="HBoxContainer/BugsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Spacer" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DayContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DayIcon" type="Label" parent="HBoxContainer/DayContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 28
text = "üìÖ"

[node name="DayValue" type="Label" parent="HBoxContainer/DayContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 28
text = "Day 1"
